      interface.
    * BUG 3308: Stop us returning duplicate mid replies on path 
      based set-EOF trans2 calls.
    * Pass RAW-OPLOCK with kernel oplocks off.
    * Fix bug in OS/2 Warp - it doesn't set the ff_last offset 
      correctly when doing info level 1 directory scans.
    * Add Samba4 replacement for timegm() to work on Solaris.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Only call the printer publishing calls if 'security = ads'.


o   Guenther Deschner <gd@samba.org>
    * Set our internal domains to "online" by default in winbindd.
    * BUG 3800: Fill the password_policy method in winbindd for 
      winbindd_passdb.
    * Fix memory leak when LDAP posix attribute queries fail.
    * Honour the krb5 principal name change (of the new ads join code) 
      in the kerberized winbind pam_auth.
    * Correctly handle the case when there is no configuration file 
      for pam_winbind.
    * Adding "own-domain" switch to wbinfo which is handy from time 
      to time.
    * BUG 3823: Fix in-forest domain trust enumeration in winbindd.


o   Aleksey Fedoseev <fedoseev@ru.ibm.com>
    * Fix parameter type for 'acl compatibility'.


o   Paul Green <paulg@samba.org>
    * Properly rebuild time limit on systems with executable extensions.


o   Volker Lendecke <vl@samba.org>
    * Fix more potential seg-faults when something on our way to a 
      DC connection fails.
    * Never fall back to using the IP address for a DC's name in RPC 
      connections.
    * Implement recycle:subdir_mode.
    * Activate RPC-AUTHCONTEXT in "make test".
    * Portability fixes for 'make test'.
    * Correctly set the group RID in init_sam_from_buffer.
    * Fix missing prompt in smbclient.
    * Return correct error code upon success from _net_srv_pwset().
    * Fix Windows XP joins to a Samba domain.
    * Fix 'valid users = +unixgroup' which was failing with smbpasswd
      when mapped to a non-algorithmic rid.